add swagger for users
